Adding access points model.
